repository/package/skin/src/main/webapp/screen.css
/* ... */
.hippo-picker-navigation-breadcrumbs li a:hover{text-decoration: underline}
/*
.hippo-picker-navigation-breadcrumbs li a:hover{background-position: right -20px}
.hippo-picker-navigation-breadcrumbs li.firstlast a:hover{background-position: right -60px}
.hippo-picker-navigation-breadcrumbs li.first a:hover{background-position: 0px 0px}
.hippo-picker-navigation-breadcrumbs li.last a:hover{background-position: 0px 0px}
*/

/* Image Picker */
.hippo-picker-properties label{float: left; margin-right: 5px; padding: 2px; line-height: 21px;}
body .hippo-picker-properties input{border: 1px solid #afafaf; padding: 4px; line-height: 16px; background: url("images/hippo-window-input-back.png") no-repeat; width: 660px}
.hippo-picker-list-details table tr th{padding: 1px; padding-left: 4px; padding-bottom: 2px; border: 1px solid #afafaf; border-right: 0px; border-bottom: none;}


/* Wizard */
/* ================================================ */
.hippo-wizard{}
.hippo-wizard-buttons{text-align: right; position: absolute; right: 15px; bottom:15px;}

/* Form elements */
/* ================================================ */
.hippo-select-file{}

/* Reorder Plugin*/
/* ================================================ */
.hippo-reorder table {width: 480px;}
.hippo-reorder .hippo-reorder-border{border: 1px solid #32629b; padding: 5px; height: 272px; overflow: auto; position: relative}
.hippo-reorder .hippo-reorder-buttons{position: absolute; right: 0px; top: 1px; width: 30px;}

.hippo-reorder .folderlist h3{font-weight: normal; padding: 2px; padding-left: 6px; padding-bottom: 5px;}
.hippo-reorder table tr td {padding: 0px;}
.hippo-reorder table tr td {border-bottom: 1px solid #ffffff }
.hippo-reorder table tr.selected td {}
.hippo-reorder table * {cursor: pointer}

.hippo-reorder table tr td.icon-16 {height: 16px; width: 16px; padding: 0px;}
.hippo-reorder table tr td.icon-16 span{display:block; height: 16px; width: 16px; margin-left: 2px;}
.hippo-reorder table tr td.icon-16 span{background-repeat: no-repeat; background-position: center center;}

.hippo-reorder table {border-collapse: separate}
.hippo-reorder table tr th{padding: 2px; padding-left: 4px; padding-bottom: 6px;}
.hippo-reorder table tr td{padding: 2px; padding-left: 4px; padding-bottom: 4px;}

/* Navigator */
/* ================================================ */
.hippo-browser-documents-small .hippo-perspective-title{color: white; padding: 2px; padding-left: 4px; float: left; padding-top: 5px;}
.hippo-browser-documents-small{background: transparent}
.hippo-browser-documents-small .hippo-browser-documents-small-folders h3{background: transparent url(images/filelistHeaderback.png) repeat-x; font-weight: normal; padding: 2px; padding-left: 6px; padding-bottom: 5px;}
 
.hippo-browser-documents-small .hippo-browser-documents-small-files{border-left: 1px solid #afafaf; border-right: 1px solid #afafaf; background: white;}
.hippo-browser-documents-small .hippo-browser-documents-small-folders{background: #f4f4f4; border-left: 1px solid #afafaf; border-bottom: 0px; border-top: 0px }
/* this is nasty and temporary, YUI wireframe needs an update */
.hippo-browser-documents-small .hippo-browser-documents-small-files .hippo-list-details{margin-top: 25px;}

.hippo-browser-documents-small .hippo-browser-documents-small-files {background: #ffffff url('images/document-list-back.png') repeat-x;}
/* toolbar requires some tweaks here */
.hippo-browser-documents-small .hippo-browser-documents-workflow select{width: 180px; padding: 1px; margin: 2px; background: transparent; border: 1px solid white; color: white;}
.hippo-browser-documents-small .hippo-browser-documents-workflow select option{color: #666666; background: white; padding: 1px;}

/* Tree Plugin */

/* overriding standard wicket tree styling */
.hippo-tree {overflow: scroll; -ms-overflow-y: auto; overflow-y: auto; -ms-overflow-x: hidden; overflow-x: hidden; width: 200px; height: 350px; z-index: 1;}

/* remove margins */
.hippo-tree div.wicket-tree{margin: 0px; border: none;}
/* make sure the first folder level in the tree doens't have a left padding */
.hippo-tree div.wicket-tree div.a_{padding-left: 0px}
.hippo-tree div.wicket-tree div.a_ div.a_{padding-left: 1em}
/* make the rows expand so it will activate the scrolling of the .hippotree div */
.hippo-tree div.wicket-tree,
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{overflow: visible; width: auto; white-space: nowrap}


/* set row height to a little higher for better clickability */
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{padding-top: 2px; padding-bottom: 2px;}

.hippo-tree div.wicket-tree div.row .hippo-tree-dropdown-icon-container {background: transparent;}
.hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
.hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}
  
.hippo-tree div.wicket-tree div.row-selected {background-image: url("images/controls/folder-background-selected.png"); } /*background-position: 0px -20px;}*/

.hippo-tree div.wicket-tree div.row a,
.hippo-tree div.wicket-tree div.row-selected a {font-weight: normal; color: black;}

/* IE6 workaround */
.hippo-tree div.wicket-tree div.context-hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}

.hippo-tree div.wicket-tree div.context-hover-selected .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
  
}

.hippo-tree .wicket-tree span.plus, 
.hippo-tree .wicket-tree span.minus {background-image: url("images/tree-icons.png"); width: 14px;}
/* ... */

